--- a/src/main/resources/templates/agent/list/list-agent.html
+++ b/src/main/resources/templates/agent/list/list-agent.html
@@ -59,7 +59,7 @@
 	        <script src="/staffadmin/bootstrap-treeview/bootstrap-treeview.min.js"></script>
 <!-- 			<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script> -->
 
-		<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         
         <script type="text/javascript">
 	        $(document).ready(function() 
@@ -129,15 +129,18 @@
             </script>
             
             <script type="text/javascript">
-/*             	$(document).ready(function() 
-            	{
-            		$('#sd').select2();
-            	});
+				function formatDropDownBoxToSelect2(idDropDown)
+				{
+	             	$(document).ready(function() 
+	                {
+	                    $('#'+idDropDown).select2();
+	                });
+				}
 
-            	$(document).ready(function() 
-                {
-                    $('#service').select2();
-                }); */
+				formatDropDownBoxToSelect2("dc");
+				formatDropDownBoxToSelect2("sd");
+				formatDropDownBoxToSelect2("service");
+
 			</script>
         </div>
     </body>
